# github-traffic-dashboard

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: publish.yml
github_traffic/: __init__.py  api.py  automation.py  cli.py  core.py  dashboard.py  process.py
github_traffic/frontend/src/: App.jsx  index.css
github_traffic/frontend/src/components/: Auth.jsx  CsvUpload.jsx  Dashboard.jsx  Landing.jsx
github_traffic_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gitlytics/: __init__.py  api.py  automation.py  core.py
src/gitlytics/static/: index.html
src/gitlytics/static/assets/: CardModal-BOGV4zC9.js  CardModal-C2SlsOAQ.js  CardModal-CXAymWi0.js  CardModal-DJr9afhV.js  ExportModal-BWJN5z0p.js  ExportModal-BcaBm9OU.js  ExportModal-DKAKAt5I.js  ExportModal-mVsoGK2C.js  exports-B_lPvdV4.js  exports-C2xgXtRD.js  exports-D2aDJUlR.js  exports-DuDMZxFf.js  index-B3eKIytG.js  index-BphKsJDD.js  index-Bzl7tkDl.js  index-CbK1npG-.js  index-ClrHOmX2.css  index-D3EMGlFv.js  index.es-BV2vkkxo.js  index.es-CYhi5XXL.js  index.es-CzVe_PFz.js  index.es-D93aAsH7.js  index.es-FwFcC9jf.js  jspdf.es.min-B4GTNTmF.js  jspdf.es.min-BWSLkSzt.js  jspdf.es.min-BZAHn0Ub.js  jspdf.es.min-C5GTQBme.js  jspdf.es.min-DZmfHa3d.js
tests/: __init__.py  test_automation.py  test_cli.py  test_core.py
